Add deprecated account field to v2 API request schema
